# seq_coloring

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main_seq.cpp  seq_coloring.h
src/tests/: CMakeLists.txt  test_seq_coloring.cpp
